<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/action_more" />

    <item
        android:id="@+id/action_news_twitter"
        android:orderInCategory="100"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/action_news_twitter" />

    <item
        android:id="@+id/action_news_fb"
        android:orderInCategory="100"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/action_news_facebook" />
</menu>
