<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/conference_view_border"
    android:minHeight="200dp"
    android:padding="3dp"
    android:layout_weight=".333">

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher"
        android:transitionName="@string/image" />

    <TextView
        android:id="@+id/dateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:padding="0dp"
        android:text="dateStart"
        android:textSize="@dimen/conference_view_text_size" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_below="@+id/image"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2dp"
        android:src="@drawable/ic_favorite_outline_grey600_18dp" />

    <TextView
        android:id="@+id/speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateStart"
        android:text="speaker"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="@dimen/conference_view_text_size"
        android:transitionName="@string/speaker" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speaker"
        android:layout_centerHorizontal="true"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="headline"
        android:textSize="@dimen/conference_view_title_text_size"
        android:transitionName="@string/headline" />

</RelativeLayout>