<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:transitionName="@string/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_alignBottom="@+id/headline"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:alpha="0.2"
                android:src="@drawable/ill_talks" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="24sp"
                android:transitionName="@string/headline" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="hr.droidcon.conference.ConferenceActivity">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dascription"
                android:layout_marginBottom="16dp"
                android:lineSpacingExtra="2dp"
                android:paddingBottom="16dp"
                android:paddingLeft="72dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:background="@color/windowBackground" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/date"
                android:paddingRight="16dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dascription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:paddingRight="16dp"
                android:text="@string/text_title"
                android:textSize="20sp"
                tools:background="@color/windowBackground" />

            <TextView
                android:id="@+id/speaker_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:text="@string/speaker_title"
                android:textSize="20sp"/>

            <RelativeLayout
                android:id="@+id/speakerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:layout_below="@+id/speaker_title">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:transitionName="@string/image"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:id="@+id/image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginBottom="8dp"
                    android:transitionName="@string/speaker"
                    android:id="@+id/speaker"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/rating_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speakerLayout"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:text="@string/rating_title"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_title"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:isIndicator="false"
                android:stepSize="1" />

            <TextView
                android:id="@+id/rating_result_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_bar"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="6dp"
                android:text="@string/rating_result_empty" />

            <ImageView
                android:id="@+id/rating_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/rating_result_bar"
                android:layout_alignTop="@id/rating_result_bar"
                android:layout_toRightOf="@id/rating_result_bar"
                android:src="@drawable/ic_star"
                android:tint="@color/textColorDetail"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/rating_result_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_bar"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/rating_image" />

            <ImageView
                android:id="@+id/rating_participants_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/rating_result_participants"
                android:layout_alignTop="@id/rating_result_participants"
                android:layout_toRightOf="@id/rating_result_participants"
                android:src="@drawable/ic_person"
                android:tint="@color/textColorDetail"
                android:visibility="invisible"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
